--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -34,23 +34,23 @@
 				<Label fx:id="labelErrorName" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="1" />
 				<TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
 				<TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Salario" GridPane.rowIndex="4" />
+            <ComboBox fx:id="comboBoxDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 				<HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
 					<children>
 						<Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
 						<Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
 					</children>
 				</HBox>
-            <Label fx:id="labelErrorEmail" text="Email" GridPane.rowIndex="2" />
-            <Label fx:id="labelErrorBirthDate" text="Data de Nascimento" GridPane.rowIndex="3" />
-            <Label fx:id="labelErrorBaseSalary" text="Salario" GridPane.rowIndex="4" />
+            <Label text="Data de Nascimento" GridPane.rowIndex="3" />
             <Label text="Departamento" GridPane.rowIndex="5" />
-            <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label textFill="#f20202" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Label textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <Label textFill="#eb0707" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <ComboBox fx:id="comboBoxDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Email" GridPane.rowIndex="2" />
+            <Label fx:id="labelErrorEmail" textFill="#f20202" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="labelErrorBirthDate" textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="labelErrorBaseSalary" textFill="#eb0707" GridPane.columnIndex="2" GridPane.rowIndex="4" />
 			</children>
 		</GridPane>
 	</children>
